# pytest-restrict

./: .pre-commit-config.yaml  CHANGELOG.rst  HISTORY.rst  MANIFEST.in  README.rst  pyproject.toml  pytest_restrict.py  requirements.in  runtests.py  setup.cfg  setup.py  test_pytest_restrict.py
requirements/: py310.txt  py311.txt  py312.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/: pytest_restrict.py
src/pytest_restrict/: __init__.py
tests/: test_it.py  test_pytest_restrict.py
tests/requirements/: py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt  requirements.in
