[metadata]
name = pytest_restrict
version = 4.4.0
description = Pytest plugin to restrict the test types allowed
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/pytest-restrict
author = Adam Johnson
author_email = me@adamj.eu
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed
keywords = pytest, restrict, class
project_urls =
    Changelog = https://github.com/adamchainz/pytest-restrict/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    pkgutil-resolve-name
    pytest
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    restrict = pytest_restrict

[flake8]
max-line-length = 88
extend-ignore = E203
